--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   device_preview: ^1.1.0
   http: ^0.13.5
   fluttertoast: ^8.1.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
